Add logic to account for a user not having an average rate of change for the last 10 days.

--- a/weightable_practice_scaffolding/app/views/users/show.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/show.html.erb
@@ -107,7 +107,7 @@
             <h4 class="green-box-headers goal-proj">GOAL PROJECTION</h4>
             <div class="dashboard-data-container">
               <div class="dashboard-data goal-projection-status"><%=@goal_projection_status%></div>
-              <div class="data-subheader">finish on: <%=@finish_date.strftime("%b %-d")%></div>
+              <div class="data-subheader">finish on: <%=@finish_date%></div>
             </div>
           </div>
         </div>
