--- a/weightable_practice_scaffolding/app/views/users/feed.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/feed.html.erb
@@ -2,7 +2,7 @@
   <div class="col-sm-10 col-sm-offset-2">
     <table>
       <tbody>
-         <% if current_user %> 
+        <%= user_content do %> 
           <% counter = 0 %>
             <% while counter < 4 %>
               <% @user.friendships.each do |friendship| %>
