Move button from middle of modal to bottom. Add goal date picker to modal to fix error on show page that tries to use goal date to calculate progress.

--- a/weightable_practice_scaffolding/app/views/layouts/application.html.erb
+++ b/weightable_practice_scaffolding/app/views/layouts/application.html.erb
@@ -39,6 +39,7 @@
 <% if current_user && current_user.weigh_ins.count == 0 %>
   <%= render 'initial_info_modal' %>
 <script type='text/javascript'>
+  $( "#datepicker" ).datepicker({dateFormat: 'yy-mm-dd'});
   $(document).on('ready', function(e){
     $('#myModal').modal();
   });
