--- a/weightable_practice_scaffolding/app/views/users/_initial_info_modal.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/_initial_info_modal.html.erb
@@ -11,7 +11,11 @@
           
           <%= f.label :goal %><br>
           <%= f.text_field :goal %><br><br>
-
+          <div class="collapse in" data-target="#goal-date">
+            <%= f.label :goal_date, :id=>"goal-date" %><br>
+            <%= f.text_field :goal_date, :id=>"datepicker" %>
+            <br /><br>
+          </div>
           <%= f.fields_for :weigh_ins, @user.weigh_ins.build do |weigh_in| %>
             <%= f.label :weight %><br>
             <%= weigh_in.text_field :weight %><br><br>
@@ -22,14 +26,14 @@
           <% end %>
         </div>
         <div class="actions">
-          <%= f.submit %>
+          
         </div>
-      <% end %>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <%= f.submit "Save changes", :class=>"btn btn-primary" %>
       </div>
+      <% end %>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
