Prevent current user's card from showing up on all_users list

--- a/weightable_practice_scaffolding/app/views/users/all_users.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/all_users.html.erb
@@ -2,7 +2,7 @@
 
 <%= user_content do %> 
   <% @users.each do |user| %>
-    <% @user_id_loop = user.id %>
+    <% unless user == current_user %>
     <!-- Creates bootstrap column -->
     <div class="friend_card col-md-3">
       
@@ -30,16 +30,17 @@
 
         <!-- Green progress bar section -->
         <div class="friend_progress_bar_base"></div>
-          <p class="friend_progress_text"><strong><%= friend_progress(@user_id_loop).round %>%</strong> to goal!</p>  
+          <p class="friend_progress_text"><strong><%= friend_progress(user.id).round %>%</strong> to goal!</p>  
           
           <!-- Shows progress toward friend's weigh loss goal -->
           <div class="friend_progress_bar_white_bar"></div>
           <div class="prog-bar-base-small"></div>
-          <div class="prog-bar-overlay-small" style="width:<%= friend_progress(@user_id_loop) %>%"></div>
+          <div class="prog-bar-overlay-small" style="width:<%= friend_progress(user.id) %>%"></div>
        
         </div>  
     <!-- Closes bootstrap column -->
     </div> 
+    <% end %>
   <% end %>
 <% end %>
 </div>
