--- a/weightable_practice_scaffolding/app/views/users/_initial_info_modal.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/_initial_info_modal.html.erb
@@ -13,16 +13,16 @@
           <%= f.text_field :goal %><br><br>
           <div class="collapse in" data-target="#goal-date">
             <%= f.label :goal_date, :id=>"goal-date" %><br>
-            <%= f.text_field :goal_date, :id=>"datepicker" %>
+            <%= f.text_field :goal_date, :id=>"datepicker", value=>"#{Date.today + }" %>
             <br /><br>
           </div>
           <%= f.fields_for :weigh_ins, @user.weigh_ins.build do |weigh_in| %>
             <%= f.label :weight %><br>
             <%= weigh_in.text_field :weight %><br><br>
           <%= f.label :height_in_feet %>
-          <%= f.select :height_in_feet, options_for_select(%w[3 4 5 6 7]) %>
+          <%= f.select :height_in_feet, options_for_select(%w[3 4 5 6 7]), value=>"5" %>
           <%= f.label :height_in_inches %>
-          <%= f.select :height_in_inches, options_for_select(%w[ 0 1 2 3 4 5 6 7 8 9 10 11 12]) %>
+          <%= f.select :height_in_inches, options_for_select(%w[ 0 1 2 3 4 5 6 7 8 9 10 11 12]), value=>"6" %>
           <% end %>
         </div>
         <div class="actions">
