Style weigh in show page until elements are nearly all in place and all that is needed is some minor placement and padding adjustments

--- a/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
@@ -187,11 +187,18 @@ h3.home-sub {
 
 .profile-pic {
 
-    height: 200px;
-    width: 200px;
-    border-radius: 50%;
-    border: 8px solid #fff;
-    box-shadow: 0 0 0 1px #beb9b5; 
+  height: 200px;
+  width: 200px;
+  border: 8px solid #fff;
+  box-shadow: 0 0 0 1px #beb9b5; 
+}
+
+.comment-prof-pic{
+  border: 2px solid gray;
+}
+
+.round-pic{
+  border-radius: 50%;
 }
 
 .profile-pad {
