Make small changes to weighin view

--- a/weightable_practice_scaffolding/app/assets/stylesheets/weigh_ins.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/weigh_ins.css.scss
@@ -17,3 +17,30 @@
 .yeehaw-btn-pad {
   margin: 25px;
 }
+
+.text-align-center {
+  text-align: center;
+}
+
+.padding-thumbs-up {
+  padding: 10px 0 0 40px;
+  margin-right: -20px;
+}
+
+.yeehaw-text-format {
+  margin: 0;
+  color: white;
+  padding:14px 0 0 14px;
+}
+
+.yh_text{
+  font-family: 'Open Sans', sans-serif !important;
+  font-weight: 600;
+  color:#4ec67c;
+  text-decoration: none;
+  font-size: 1.5em !important;
+}
+
+.neg-margin{
+  margin: 35px 0 0 -20px;
+}
