--- a/weightable_practice_scaffolding/app/assets/stylesheets/weigh_ins.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/weigh_ins.css.scss
@@ -23,14 +23,13 @@
 }
 
 .padding-thumbs-up {
-  padding: 10px 0 0 40px;
-  margin-right: -20px;
+  padding: 10px 0 0 25px;
 }
 
 .yeehaw-text-format {
   margin: 0;
   color: white;
-  padding:14px 0 0 14px;
+  padding:14px 0 0 0px;
 }
 
 .yh_text{
@@ -39,8 +38,17 @@
   color:#4ec67c;
   text-decoration: none;
   font-size: 1.5em !important;
+  line-height: 1.2em;
 }
 
 .neg-margin{
   margin: 35px 0 0 -20px;
+}
+
+.wi-pg-comment-btn {
+  margin-top:10px;
+}
+
+.vert-center {
+  line-height:35px;
 }
