--- a/weightable_practice_scaffolding/app/views/users/show.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/show.html.erb
@@ -120,7 +120,7 @@
             <div class="dashboard-data-container">
               <div class="goal-projection-status">
                 <i class="fa fa-trophy record-weight-trophy"></i>
-                <span class="dashboard-data"><%= @record_weight %></span>
+                <span class="dashboard-data"><%= @user.record_weight %></span>
                 <span class="record-weight">lbs</span>
               </div>
             </div>
