--- a/weightable_practice_scaffolding/app/views/users/friends.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/friends.html.erb
@@ -24,12 +24,12 @@
 
         <!-- Green progress bar section -->
         <div class="friend_progress_bar_base"></div>
-          <p class="friend_progress_text"><strong><%= friend_progress(@friend_id_loop).round %>%</strong> to goal!</p>  
+          <p class="friend_progress_text"><strong><%= friendship.friend.progressbar.round %>%</strong> to goal!</p>  
           
           <!-- Shows progress toward friend's weigh loss goal -->
           <div class="friend_progress_bar_white_bar"></div>
           <div class="prog-bar-base-small"></div>
-          <div class="prog-bar-overlay-small" style="width:<%= friend_progress(@friend_id_loop) %>%"></div>
+          <div class="prog-bar-overlay-small" style="width:<%= friendship.friend.progressbar %>%"></div>
        
         </div>  
     <!-- Closes bootstrap column -->
