--- a/weightable_practice_scaffolding/app/views/layouts/application.html.erb
+++ b/weightable_practice_scaffolding/app/views/layouts/application.html.erb
@@ -28,12 +28,12 @@
      </div>
      </div>
     </main>
-    <div class="footer">
+    <footer class=footer>
       <% if user_signed_in? %>
       Signed in as <%= current_user.name %>. Not you?
       <%= link_to "Sign out", destroy_user_session_path,:method => :delete %>
       <% end %>
-    </div>
+    </footer>
   </body>
 </html>
 <% if current_user && current_user.weigh_ins.count == 0 %>
