Correct BMI function to calculate BMI based on most recent weigh_in

--- a/weightable_practice_scaffolding/app/views/users/_show_wi_feed.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/_show_wi_feed.html.erb
@@ -15,7 +15,7 @@
 
 <!-- begin weigh-in speech bubbles -->
 <div>
-  <h1 class="your-weigh-ins">Your Weigh-Ins</h1>
+  <h1 class="your-weigh-ins">your weigh-ins</h1>
   <% counter = 0 %>
   <% @user.weigh_ins.first(4).each do |weight| %>
     <% @weights.unshift(weight.weight) %>
