--- a/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
@@ -245,7 +245,7 @@ h3.home-sub {
   height:38px;
   line-height: 38px;
   text-align: center;
-  z-index: 1
+  z-index: 1;
   p {
   color: white;
   }
